--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,14 @@
 @import 'tailwindcss';
+
+.botao{
+    @apply flex justify-center items-center gap-2;
+    @apply py-1 px-8 rounded-md
+}
+.botao.azul{
+    @apply bg-blue-500 text-white;
+    @apply hover:bg-blue-600 transition-colors;
+}
+.botao.vermelho{
+    @apply bg-red-500 text-white;
+    @apply hover:bg-red-600 transition-colors;
+}
